[gd_scene load_steps=3 format=3 uid="uid://co2gtkorldd8j"]

[ext_resource type="Script" path="res://scenes/ui/ProjectEditor/SprinklerPropertyEditor/SprinklerPropertyEditor.gd" id="1_0j0oi"]
[ext_resource type="PackedScene" uid="uid://tgnf3tq05nsl" path="res://scenes/ui/widgets/BlinkLabel/BlinkLabel.tscn" id="2_bfwh7"]

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = -1
anchor_right = 0.297
anchor_bottom = 0.825
offset_right = -0.167007
offset_bottom = -3.05176e-05
script = ExtResource("1_0j0oi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SprinklerPropertiesList" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
text = "Label: "

[node name="UserLabelLineEdit" type="LineEdit" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "User-definable label for this sprinkler"

[node name="Label4" type="Label" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
text = "Manufacturer: "

[node name="ManufacturerOption" type="OptionButton" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2

[node name="Label5" type="Label" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
text = "Model: "

[node name="ModelOption" type="OptionButton" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2

[node name="Label9" type="Label" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
text = "Zone: "

[node name="ZoneSpinBox" type="SpinBox" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "User-definable label for this sprinkler"

[node name="Label2" type="Label" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
text = "Sweep: "

[node name="SweepSpinBox" type="SpinBox" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
tooltip_text = "Total spray angle or rotor's swept angle"
max_value = 360.0
suffix = "deg"

[node name="Label3" type="Label" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
text = "Rotation: "

[node name="RotationSpinBox" type="SpinBox" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
tooltip_text = "Angle sprinkler body"
min_value = -360.0
max_value = 360.0
suffix = "deg"

[node name="Label6" type="Label" parent="VBoxContainer/SprinklerPropertiesList"]
modulate = Color(1, 0.188235, 0.215686, 1)
layout_mode = 2
text = "Min Distance: "

[node name="MinDistanceSpinBox" type="SpinBox" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
suffix = "ft"

[node name="Label7" type="Label" parent="VBoxContainer/SprinklerPropertiesList"]
modulate = Color(0.39, 1, 0.4205, 1)
layout_mode = 2
text = "Max Distance: "

[node name="MaxDistanceSpinBox" type="SpinBox" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
suffix = "ft"

[node name="Label8" type="Label" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
text = "Distance: "

[node name="DistanceSpinBox" type="SpinBox" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
suffix = "ft"

[node name="Label10" type="Label" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2
text = "Head Color:"

[node name="BodyColorPicker" type="ColorPickerButton" parent="VBoxContainer/SprinklerPropertiesList"]
layout_mode = 2

[node name="MultiEditWarning" parent="VBoxContainer" instance=ExtResource("2_bfwh7")]
visible = false
layout_mode = 2

[connection signal="text_submitted" from="VBoxContainer/SprinklerPropertiesList/UserLabelLineEdit" to="." method="_on_user_label_line_edit_text_submitted"]
[connection signal="item_selected" from="VBoxContainer/SprinklerPropertiesList/ManufacturerOption" to="." method="_on_manufacturer_option_item_selected"]
[connection signal="item_selected" from="VBoxContainer/SprinklerPropertiesList/ModelOption" to="." method="_on_model_option_item_selected"]
[connection signal="value_changed" from="VBoxContainer/SprinklerPropertiesList/ZoneSpinBox" to="." method="_on_zone_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SprinklerPropertiesList/SweepSpinBox" to="." method="_on_sweep_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SprinklerPropertiesList/RotationSpinBox" to="." method="_on_rotation_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SprinklerPropertiesList/MinDistanceSpinBox" to="." method="_on_min_distance_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SprinklerPropertiesList/MaxDistanceSpinBox" to="." method="_on_max_distance_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SprinklerPropertiesList/DistanceSpinBox" to="." method="_on_distance_spin_box_value_changed"]
[connection signal="color_changed" from="VBoxContainer/SprinklerPropertiesList/BodyColorPicker" to="." method="_on_body_color_picker_color_changed"]
[connection signal="popup_closed" from="VBoxContainer/SprinklerPropertiesList/BodyColorPicker" to="." method="_on_body_color_picker_popup_closed"]
[connection signal="pressed" from="VBoxContainer/SprinklerPropertiesList/BodyColorPicker" to="." method="_on_body_color_picker_pressed"]
